# Devops-course

./: LICENSE  README.md
.github/workflows/: python-app.yml
Jenkins/: Dockerfile  Jenkinsfile
Terraform/: TF.md
Terraform/aws/: aws.tf
ansible/: README.md  ansible.cfg  ssh_hosts.txt
ansible/playbooks/: deploy_app.yml  install_docker.yml
ansible/roles/deploy_app/meta/: main.yml
ansible/roles/deploy_app/tasks/: docker-compose.yml  main.yml
ansible/roles/deploy_app/vars/: main.yml
app_python/: CI.md  DOCKER.md  Dockerfile  PYTHON.md  pyproject.toml  requirements.txt
app_python/myapp/: main.py  pyproject.toml  requirements.txt
app_python/myapp/tests/: test_main.py
app_python/templates/: index.html
app_python/tests/: test_main.py
k8s/: README.md  deployment.yml  my-app-0.1.0.tgz  service.yml
k8s/Lab_11/: 11.md
k8s/Lab_11/secrets/: username.txt
k8s/Lab_12/: 12.md
k8s/Lab_13/: 13.md
k8s/Lab_14/: 14.md
k8s/my-app/: Chart.yaml  values.yaml
k8s/my-app/templates/: deployment.yaml  secrets.yml  statefulset.yaml
monitoring/: .env  LOGGING.md  docker-compose.yml  promtail.yml
