[project]
name = ""
version = ""
description = ""
authors = [
    {name = "KamilKhairullin", email = "kamil.khayrullin.personal@yandex.ru"},
]
dependencies = [
    "flask~=2.0",
    "black~=21.7b0",
    "isort~=5.9",
    "pyupgrade~=2.23",
    "pylint~=2.9",
    "darglint~=1.8",
    "bandit~=1.7",
    "pytest~=6.2",
    "lice~=0.6",
    "mypy~=0.910",
    "pdm-freeze~=1.0",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
